<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AnadirLugar">

<androidx.constraintlayout.widget.ConstraintLayout
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="417dp"
    android:layout_height="276dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:srcCompat="@tools:sample/backgrounds/scenic" />

<EditText
    android:id="@+id/textName"
    android:layout_width="300dp"
    android:layout_height="45dp"
    android:ems="10"
    android:inputType="text"
    android:text="@string/nombreLugar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.225"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0.0" />

<EditText
    android:id="@+id/textUrl"
    android:layout_width="300dp"
    android:layout_height="45dp"
    android:layout_marginTop="64dp"
    android:ems="10"
    android:inputType="text"
    android:text="Url"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.225"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textDireccion"
    app:layout_constraintVertical_bias="0.012" />

<EditText
    android:id="@+id/textLongitud"
    android:layout_width="140dp"
    android:layout_height="45dp"
    android:ems="10"
    android:inputType="text"
    android:text="@string/longitud"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textDireccion"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textDireccion"
    app:layout_constraintTop_toBottomOf="@+id/textDireccion"
    app:layout_constraintVertical_bias="0.038" />

<EditText
    android:id="@+id/textFecha"
    android:layout_width="300dp"
    android:layout_height="45dp"
    android:ems="10"
    android:inputType="date"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.225"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textComentario"
    app:layout_constraintVertical_bias="0.079" />

<RatingBar
    android:id="@+id/barraValoracion"
    android:layout_width="wrap_content"
    android:layout_height="45dp"
    android:isIndicator="false"
    android:numStars="5"
    android:rating="0"
    android:stepSize="0.1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.315"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textFecha"
    app:layout_constraintVertical_bias="0.132" />

<EditText
    android:id="@+id/textComentario"
    android:layout_width="300dp"
    android:layout_height="45dp"
    android:ems="10"
    android:inputType="text"
    android:text="@string/comentarioLugar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.225"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textUrl"
    app:layout_constraintVertical_bias="0.061" />

<Spinner
    android:id="@+id/tipoLugar"
    android:layout_width="300dp"
    android:layout_height="45dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.225"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/barraValoracion"
    app:layout_constraintVertical_bias="0.518" />

<EditText
    android:id="@+id/textLatitud"
    android:layout_width="140dp"
    android:layout_height="45dp"
    android:ems="10"
    android:inputType="text"
    android:text="@string/latitud"
    app:layout_constraintBottom_toBottomOf="@+id/textLongitud"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.188"
    app:layout_constraintStart_toEndOf="@+id/textLongitud"
    app:layout_constraintTop_toTopOf="@+id/textLongitud"
    app:layout_constraintVertical_bias="0.0" />

<EditText
    android:id="@+id/textDireccion"
    android:layout_width="300dp"
    android:layout_height="45dp"
    android:ems="10"
    android:inputType="text"
    android:text="@string/direccionLugar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textName"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textName"
    app:layout_constraintTop_toBottomOf="@+id/textName"
    app:layout_constraintVertical_bias="0.032" />

<Button
    android:id="@+id/btnAceptar"
    android:layout_width="408dp"
    android:layout_height="51dp"
    android:layout_marginStart="164dp"
    android:layout_marginTop="199dp"
    android:rotation="90"
    android:text="@string/aceptarLugar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>